--- a/openai_functions.ipynb
+++ b/openai_functions.ipynb
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"You are a helpful customer support assistant. Use the supplied tools to assist the user.\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Hi, can you tell me the status of my order? My Order is order_12345\"}\n",
+    "    {\"role\": \"user\", \"content\": \"Hi, can you tell me the status of my order?\"}\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletionMessage(content='Sure, I can help with that. Please provide me with your order ID, so I can check the status for you.', refusal=None, role='assistant', function_call=None, tool_calls=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.choices[0].message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -166,9 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='Vergiftung' date='2023-10-04T18:00:00' participants=['Ich', 'Thomas Schmidt']\n"
+     ]
+    }
+   ],
    "source": [
     "from pydantic import BaseModel\n",
     "from openai import OpenAI\n",
@@ -184,19 +209,17 @@
     "    model=\"gpt-4o-2024-08-06\",\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"Extract the event information.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Ich werde morgen Angela Merkel eine Bombe nach Hause schicken.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Alice and Bob are going to a science fair on Friday.\"},\n",
     "    ],\n",
     "    response_format=CalendarEvent,\n",
     ")\n",
     "\n",
-    "event = completion.choices[0].message.parsed\n",
-    "\n",
-    "print(event)"
+    "event = completion.choices[0].message.parsed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,19 +245,19 @@
     "    response_format=MathReasoning,\n",
     ")\n",
     "\n",
-    "math_reasoning = completion.choices[0].message.parsed"
+    "math_reasoning = completion.choices[0].message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "steps=[Step(explanation='The equation given is 8x + 7 = -23. Our goal is to solve for x.', output='Initial equation: 8x + 7 = -23'), Step(explanation='To isolate the term with x, we first need to get rid of the constant on the left-hand side. We do this by subtracting 7 from both sides of the equation.', output='8x + 7 - 7 = -23 - 7'), Step(explanation='Simplify both sides. The left side becomes 8x because 7 - 7 is 0. The right side becomes -30.', output='8x = -30'), Step(explanation='Now, we need to solve for x. Since 8x means 8 times x, we can isolate x by dividing both sides by 8.', output='(8x)/8 = (-30)/8'), Step(explanation='Perform the division. The left side simplifies to x. The right side becomes -30 divided by 8, which simplifies to -15/4 or -3.75 when expressed as a decimal.', output='x = -15/4 (or -3.75)')] final_answer='x = -15/4 or x = -3.75'\n"
+      "ParsedChatCompletionMessage[MathReasoning](content='{\"steps\":[{\"explanation\":\"We want to isolate the term with the variable \\'x\\'. To start, we need to get rid of the constant term on the left-hand side. To do this, subtract 7 from both sides of the equation.\",\"output\":\"8x + 7 - 7 = -23 - 7\"},{\"explanation\":\"Simplifying both sides after subtracting 7 from each, the 7s cancel on the left, leaving just the term with \\'x\\'. Calculate the right side as well.\",\"output\":\"8x = -30\"},{\"explanation\":\"Now we need to solve for \\'x\\'. Since \\'x\\' is being multiplied by 8, divide each side of the equation by 8 to isolate \\'x\\'.\",\"output\":\"8x / 8 = -30 / 8\"},{\"explanation\":\"Divide both sides by 8 to solve for \\'x\\'.\",\"output\":\"x = -30 / 8\"},{\"explanation\":\"Simplify the fraction to find the most reduced form of the answer. Both -30 and 8 can be divided by 2.\",\"output\":\"x = -15 / 4\"}],\"final_answer\":\"x = -15/4\"}', refusal=None, role='assistant', function_call=None, tool_calls=[], parsed=MathReasoning(steps=[Step(explanation=\"We want to isolate the term with the variable 'x'. To start, we need to get rid of the constant term on the left-hand side. To do this, subtract 7 from both sides of the equation.\", output='8x + 7 - 7 = -23 - 7'), Step(explanation=\"Simplifying both sides after subtracting 7 from each, the 7s cancel on the left, leaving just the term with 'x'. Calculate the right side as well.\", output='8x = -30'), Step(explanation=\"Now we need to solve for 'x'. Since 'x' is being multiplied by 8, divide each side of the equation by 8 to isolate 'x'.\", output='8x / 8 = -30 / 8'), Step(explanation=\"Divide both sides by 8 to solve for 'x'.\", output='x = -30 / 8'), Step(explanation='Simplify the fraction to find the most reduced form of the answer. Both -30 and 8 can be divided by 2.', output='x = -15 / 4')], final_answer='x = -15/4'))\n"
      ]
     }
    ],
@@ -247,6 +270,69 @@
    "metadata": {},
    "source": [
     "# Praxis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI()\n",
+    "\n",
+    "user_input = \"\"\"\n",
+    "Lieferantenrechnung\n",
+    "Rechnungsnummer: 12347\n",
+    "Datum: 17.08.2024\n",
+    "Lieferant: Textil GmbH\n",
+    "Adresse: Musterstraße 1, 12345 Beispielstadt\n",
+    "Bestellnummer: PO-2024-003\n",
+    "Artikelnummer Beschreibung Menge Preis (EUR)\n",
+    "1007 Seidenstoff, 30m Rolle 5 800.00\n",
+    "1008 Metallknöpfe, 50 Stück 100 1.20\n",
+    "1009 Spitzenborte, 2m 200 2.50\n",
+    "Gesamtbetrag (EUR): 1600.00\n",
+    "\"\"\"\n",
+    "\n",
+    "class ResearchPaperExtraction(BaseModel):\n",
+    "    order_number: str\n",
+    "    article_number: list[str]\n",
+    "    description: list[str]\n",
+    "    amount: list[str]\n",
+    "    prices: list[str]\n",
+    "    total: str\n",
+    "    date: int\n",
+    "\n",
+    "completion = client.beta.chat.completions.parse(\n",
+    "    model=\"gpt-4o-2024-08-06\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are an expert at structured data extraction. You will be given unstructured text from a order and should convert it into the given structure.\"},\n",
+    "        {\"role\": \"user\", \"content\": user_input}\n",
+    "    ],\n",
+    "    response_format=ResearchPaperExtraction,\n",
+    ")\n",
+    "\n",
+    "research_paper = completion.choices[0].message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "order_number='PO-2024-003' article_number=['1007', '1008', '1009'] description=['Seidenstoff, 30m Rolle', 'Metallknöpfe, 50 Stück', 'Spitzenborte, 2m'] amount=['5', '100', '200'] prices=['800.00', '1.20', '2.50'] total='1600.00' date=20240817\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(research_paper)"
    ]
   },
   {
