Updated Chroma to HTTP-Client

--- a/vectordb_verträge.ipynb
+++ b/vectordb_verträge.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -534,19 +534,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HTTP Client Chroma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import chromadb\n",
+    "import openai\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import chromadb.utils.embedding_functions as embedding_functions\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Retrieve the OpenAI API key from the environment variables\n",
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "# Use OpenAIEmbeddingFunction from Chroma utils\n",
+    "embedding_function = embedding_functions.OpenAIEmbeddingFunction(\n",
+    "    api_key=openai.api_key,\n",
+    "    model_name=\"text-embedding-3-large\"  # You can choose another model like \"text-embedding-ada-002\"\n",
+    ")\n",
+    "\n",
+    "# Set up the Chroma HTTP client to connect to your AWS instance\n",
+    "chroma_client = chromadb.HttpClient(\n",
+    "    host='16.171.0.22',  # Replace with your AWS instance's public IP\n",
+    "    port=8000\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming processed_docs is a list of chunks (processed document parts)\n",
+    "# Add the processed chunks into ChromaDB\n",
+    "\n",
+    "collection = chroma_client.get_or_create_collection(\n",
+    "    name=\"bachelor-vertrag\",\n",
+    "    embedding_function=embedding_function\n",
+    ")\n",
+    "\n",
+    "# Example processed docs\n",
+    "# processed_docs = [{\"content\": \"Standardliefervertrag ...\", \"metadata\": {\"source\": \"path_to_pdf\", \"page\": 0}}]\n",
+    "\n",
+    "# Extract the document content and metadata for insertion into the database\n",
+    "documents = [doc['content'] for doc in processed_docs]\n",
+    "metadatas = [doc['metadata'] for doc in processed_docs]\n",
+    "ids = [f\"doc_{i+1}\" for i in range(len(processed_docs))]  # Unique IDs for each document\n",
+    "\n",
+    "# Add to the collection\n",
+    "collection.add(\n",
+    "    documents=documents,\n",
+    "    metadatas=metadatas,\n",
+    "    ids=ids\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\linus\\OneDrive\\Desktop\\Bachelor\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:141: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
-      "  warn_deprecated(\n"
+      "Documents: [['Standardliefervertrag  \\n \\nzwischen  \\n \\nder Firma Textilius GmbH, vertreten durch den Geschäftsführer Max Mustermann,  \\nIndustriestraße 1, 12345 Musterstadt  \\n- nachfolgend \"Lieferant\" genannt - \\n \\nund  \\n \\nder Firma Schneiderei Schmidt KG, vertreten durch die Geschäftsführerin Anna \\nSchmidt,  \\nIndustriepark 3, 54321 Musterdorf  \\n- nachfolgend \"Kunde\" genannt -', '§ 12 Schlussbestimmungen  \\n \\n12.1 Änderungen und Ergänzungen dieses Vertrages bedürfen der Schriftform. Dies gilt \\nauch für die Aufhebung des Schriftformerfordernisses.  \\n \\n12.2 Sollten einzelne Bestimmungen dieses Vertrages unwirksam oder undurchführbar \\nsein oder werden, so berührt dies die Wirksamkeit der übrigen Bestimmungen nicht.  \\n \\n12.3 Es gilt ausschließlich das Recht der Bundesrepublik Deutschland unter Ausschluss \\ndes UN-Kaufrechts.  \\n \\n12.4 Erfüllungsort und Gerichtsstand für alle Streitigkeiten aus diesem Vertrag ist \\nMusterstadt, sofern der Kunde Kaufmann, juristische Person des öffentlichen Rechts \\noder öffentlich -rechtliches Sondervermögen ist.  \\n \\nMusterstadt, den [DATUM]  \\n \\n____________________________                ____________________________  \\nFirma Textilius GmbH                         Firma Schneiderei Schmidt KG  \\nvertreten durch Max Mustermann               vertreten durch Anna Schmidt', '§ 1 Vertragsgegenstand  \\n \\n1.1 Gegenstand dieses Vertrages ist die Lieferung von Textilmaterialien durch den \\nLieferanten an den Kunden gemäß den nachfolgenden Bestimmungen.  \\n \\n1.2 Die zu liefernden Produkte umfassen:  \\n   a) Baumwollstoff, 100m Rolle  \\n   b) Polyesterfaden, 50m Spule  \\n   c) Reißverschlüsse, 25cm', '§ 4 Lieferbedingungen  \\n \\n4.1 Die Lieferung erfolgt innerhalb von 14 Tagen nach Eingang der Bestellung beim \\nLieferanten.  \\n \\n4.2 Der Lieferant verpflichtet sich zur Lieferung an die folgende Adresse des Kunden:  \\n   Schneiderei Schmidt KG  \\n   Industriepark 3  \\n   54321 Musterdorf', '§ 4 Lieferbedingungen\\n4.3 Die Gefahr des zufälligen Untergangs und der zufälligen Verschlechterung der Ware \\ngeht mit der Übergabe an den Spediteur, den Frachtführer oder die sonst zur Ausführung \\nder Versendung bestimmte Person auf den Kunden über.  \\n \\n4.4 Der Lieferant trägt die Verantwortung für eine sachgerechte Verpackung und den \\nsicheren Versand der Ware.  \\n \\n4.5 Teillieferungen sind zulässig, soweit sie dem Kunden zumutbar sind.']]\n",
+      "Metadata: [[{'page': 0, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}, {'page': 5, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}, {'page': 0, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}, {'page': 1, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}, {'page': 2, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}]]\n"
      ]
     }
    ],
+   "source": [
+    "# Test querying the collection\n",
+    "result = collection.query(\n",
+    "    query_texts=[\"Standardliefervertrag\"],  # Example query\n",
+    "    n_results=5,\n",
+    "    include=[\"documents\", \"metadatas\"]\n",
+    ")\n",
+    "\n",
+    "# Access the 'documents' key from the result dictionary\n",
+    "documents = result.get(\"documents\")\n",
+    "metadatas = result.get(\"metadatas\")\n",
+    "\n",
+    "# Print the documents and metadata\n",
+    "print(\"Documents:\", documents)\n",
+    "print(\"Metadata:\", metadatas)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "\n",
@@ -555,17 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created vectorstore with 17 documents.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.schema import Document\n",
     "\n",
@@ -593,63 +682,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "§ 9 Preisänderungsklausel  \n",
-      " \n",
-      "9.1 Die im Vertrag festgelegten Preise unterliegen einer jährlichen Überprüfung zum \n",
-      "01.01. eines jeden Jahres.  \n",
-      " \n",
-      "9.2 Sollte es zu signifikanten Änderungen der Rohstoffpreise oder anderer relevanter \n",
-      "Kostenfaktoren kommen, behält sich der Lieferant das Recht vor, die Preise anzupassen.  \n",
-      " \n",
-      "9.3 Preisänderungen sind nur zulässig, wenn die Rohstoffpreise um mehr als 10% im \n",
-      "Vergleich zum Vorjahr gestiegen sind. Die Preisanpassung darf den Anstieg der \n",
-      "Rohstoffpreise nicht übersteigen.  \n",
-      " \n",
-      "9.4 Preisänderungen müssen mindestens 30 Tage vor Inkrafttreten schriftlich \n",
-      "angekündigt werden. Der Kunde hat das Recht, innerhalb von 14 Tagen nach Erhalt der \n",
-      "Ankündigung den Vertrag zu kündigen, sollte er den neuen Preisen nicht zustimmen. \n",
-      "\n",
-      " [{'page': 4, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}]\n",
-      "§ 3 Preisvereinbarungen\n",
-      "etwaiger Anpassungen gemäß § 9 dieses Vertrages. \n",
-      "\n",
-      " [{'page': 1, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}]\n",
-      "§ 3 Preisvereinbarungen  \n",
-      " \n",
-      "3.1 Die Parteien vereinbaren folgende Preise für die im Vertrag aufgeführten Produkte:  \n",
-      "   a) Baumwollstoff, 100m Rolle: 500,00 EUR pro Rolle  \n",
-      "   b) Polyesterfaden, 50m Spule: 2,00 EUR pro Spule  \n",
-      "   c) Reißverschlüsse, 25cm: 1,50 EUR pro Stück  \n",
-      " \n",
-      "3.2 Alle Preise verstehen sich zuzüglich der gesetzlichen Mehrwertsteuer.  \n",
-      " \n",
-      "3.3 Die vereinbarten Preise gelten für die gesamte Vertragslaufzeit, vorbehaltlich \n",
-      "\n",
-      " [{'page': 1, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}]\n",
-      "§ 2 Vertragslaufzeit\n",
-      "2.2 Der Vertrag verlängert sich automatisch um jeweils ein weiteres Jahr, sofern er nicht \n",
-      "von einer der Parteien mit einer Frist von drei Monaten zum Ende der jeweiligen Laufzeit \n",
-      "schriftlich gekündigt wird.  \n",
-      " \n",
-      "2.3 Das Recht zur außerordentlichen Kündigung aus wichtigem Grund bleibt hiervon \n",
-      "unberührt. \n",
-      "\n",
-      " [{'page': 1, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}]\n",
-      "§ 2 Vertragslaufzeit  \n",
-      " \n",
-      "2.1 Dieser Vertrag beginnt am 01.01.2024 und endet am 31.12.2024. \n",
-      "\n",
-      " [{'page': 0, 'source': 'documents\\\\Verträge\\\\Standardliefervertrag.pdf'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = vectordb.similarity_search(\n",
     "    \"Welche Bedingungen gelten für die Preisänderungen und wie wirken sich diese auf die Vertragslaufzeit aus?\",\n",
@@ -713,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
